# black-arrow

./: .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  Pipfile  README.md  blackarrow.py  install.sh  pyproject.toml  setup.py
.pytest_cache/v/cache/: lastfailed  nodeids
blackarrow/: __init__.py  blackarrow.py
blackarrow/test/: test_indexing.py
doc/: black-arrow.txt
plugin/: black-arrow-plugin.vim
rplugin/python/: black-arrow-plugin.py
rplugin/python3/: black-arrow-plugin.py  black_arrow.py  black_arrow_plugin.py  blackarrow.py
rplugin/python3/blackarrow/: __init__.py  blackarrow.py
sample/: tester.txt
