[tool.poetry]
name = "blackarrow"
version = "1.0"
description = ""
authors = ["Zoe Farmer <zoe@dataleek.io>"]

[tool.poetry.dependencies]
python = "^3.6.2"
black = "^21.6b0"
fabulous = "^0.4.0"
pytest = "^6.2.4"
twine = "^3.4.1"
pytest-cov = "^2.12.1"
coveralls = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
