[tool.poetry]
name = "blackarrow"
version = "1.0.12"
description = "A fast keyword searcher"
authors = ["Zoe Farmer <zoe@dataleek.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TheDataLeek/black-arrow"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7"
]
keywords = ["development", "searching", "text", "find", "replace"]

[tool.poetry.dependencies]
python = "^3.6.2"
fabulous = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pytest = "^6.2.4"
twine = "^3.4.1"
pytest-cov = "^2.12.1"
coveralls = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
blackarrow = "blackarrow:main"
ba = "blackarrow:main"
